--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
