--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "ioredis": "^5.7.0",
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
