--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^8.0.1",
     "ioredis": "^5.7.0",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
     "winston": "^3.17.0"
